# backend/api/learningPackage.ts
@@ -1,8 +1,9 @@
 import {Request, Response, Router} from 'express';
-import {check, validationResult} from "express-validator";
+import {body, check, validationResult} from "express-validator";
 import LearningPackage from '../config/learningPackage.model';
 import User from "../config/user.model";
 import {Op} from "sequelize";
+import LearningFact from "../config/learningFact.model";
 
 const router = Router();
 
@@ -13,13 +14,21 @@ const HTTP_BAD_REQUEST: number = 400;
 const HTTP_NOT_FOUND: number = 404;
 const HTTP_INTERNAL_SERVER_ERROR: number = 500;
 
-const handlers_errors = [
+const handlers_errors_p = [
     check('title').isLength({min: 3}),
     check('description').isLength({min: 3}),
     check('category').isLength({min: 3}),
     check('targetAudience').isLength({min: 3}),
     check('duration').isNumeric(),
     check('creatorId').isNumeric(),
+]
+
+const handlers_errors_f = [
+    check('front').isLength({min: 3}),
+    check('back').isLength({min: 3}),
+    check('source').isURL(),
+    check('relatedImage').if(body('relatedImage').exists({checkFalsy: true})).isURL(),
+    check('relatedLink').if(body('relatedLink').exists({checkFalsy: true})).isURL(),
 ]
 
 router.get('/package', async (_req: Request, res: Response) => {
@@ -31,7 +40,7 @@ router.get('/package', async (_req: Request, res: Response) => {
     }
 });
 
-router.post('/package', handlers_errors, async (req: Request, res: Response) => {
+router.post('/package', handlers_errors_p, async (req: Request, res: Response) => {
     const errors = validationResult(req);
     if (!errors.isEmpty()) {
         return res.status(HTTP_BAD_REQUEST).send({error: errors.array()});
@@ -65,7 +74,7 @@ router.get('/package/:id', async (req: Request, res: Response) => {
     }
 });
 
-router.put('/package/:id', handlers_errors, async (req: Request, res: Response) => {
+router.put('/package/:id', handlers_errors_p, async (req: Request, res: Response) => {
     const errors = validationResult(req);
     if (!errors.isEmpty()) {
         return res.status(HTTP_BAD_REQUEST).send({error: errors.array()});
@@ -86,7 +95,44 @@ router.put('/package/:id', handlers_errors, async (req: Request, res: Response) 
     }
 });
 
-router.get('/package-summary', async (_req: Request, res: Response) => {
+router.get('/package/:id/fact', async (req: Request, res: Response) => {
+    try {
+        const learningFacts: LearningFact[] = await LearningFact.findAll({where: {packageId: req.params.id}});
+        res.status(HTTP_OK).send(learningFacts);
+    } catch (error) {
+        res.status(HTTP_INTERNAL_SERVER_ERROR).send({error: error.message});
+    }
+});
+
+router.post('/package/:id/fact', handlers_errors_f, async (req: Request, res: Response) => {
+    const errors = validationResult(req);
+    if (!errors.isEmpty()) {
+        return res.status(HTTP_BAD_REQUEST).send({error: errors.array()});
+    }
+
+    const {front, back, source, relatedImage, relatedLink, creatorId} = req.body;
+
+    try {
+        const packageId: number = +req.params.id;
+        const packageExists: LearningPackage | null = await LearningPackage.findByPk(packageId);
+        if (!packageExists) {
+            return res.status(HTTP_NOT_FOUND).send({error: `Package with ID ${packageId} does not exist.`});
+        }
+
+        const userExists: User | null = await User.findByPk(creatorId);
+        if (!userExists) {
+            return res.status(HTTP_NOT_FOUND).send({error: `User with ID ${creatorId} does not exist.`});
+        }
+
+        const newFact = {front, back, source, relatedImage, relatedLink, packageId, creatorId};
+        const createdFact: LearningFact = await LearningFact.create(newFact);
+        res.status(HTTP_CREATED).send(createdFact);
+    } catch (error) {
+        res.status(HTTP_INTERNAL_SERVER_ERROR).send({error: error.message});
+    }
+});
+
+router.get('/package/summary', async (_req: Request, res: Response) => {
     try {
         const learningPackagesSummaries: LearningPackage[] = await LearningPackage.findAll({attributes: ['packageId', 'title']});
         res.status(HTTP_OK).send(learningPackagesSummaries);
@@ -95,7 +141,7 @@ router.get('/package-summary', async (_req: Request, res: Response) => {
     }
 });
 
-router.get('/package-search', async (req: Request, res: Response) => {
+router.get('/package/search', async (req: Request, res: Response) => {
     const titleQuery = req.query.title?.toString().toLowerCase() || null;
     const descriptionQuery = req.query.description?.toString().toLowerCase() || null;
     const categoryQuery = req.query.category?.toString().toLowerCase() || null;
