# backend/openapi.yaml
@@ -102,7 +102,7 @@ paths:
           description: Conflict
         '500':
           description: Internal Server Error
-  /api/user-deactivate/{id}:
+  /api/user/{id}/deactivate:
     put:
       summary: Deactivate a user by id
       operationId: deactivateUserById
@@ -225,7 +225,63 @@ paths:
           description: Not Found
         '500':
           description: Internal Server Error
-  /api/package-summary:
+  /api/package/{id}/fact:
+    get:
+      summary: Get all learning facts by learning package id
+      operationId: getLearningFactByLearningPackageId
+      tags:
+        - Learning Packages
+      parameters:
+        - name: id
+          in: path
+          description: The id of the learning package
+          required: true
+          schema:
+            type: number
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/LearningFact'
+        '500':
+          description: Internal Server Error
+    post:
+      summary: Create a new learning fact associated to a learning package
+      operationId: createLearningFact
+      tags:
+        - Learning Packages
+      parameters:
+        - name: id
+          in: path
+          description: The id of the learning package
+          required: true
+          schema:
+            type: number
+      requestBody:
+        description: The learning fact to create
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/LearningFact'
+      responses:
+        '201':
+          description: Created
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/LearningFact'
+        '400':
+          description: Bad Request
+        '404':
+          description: Not Found
+        '500':
+          description: Internal Server Error
+  /api/package/summary:
     get:
       summary: Get all learning packages summaries and return only id and title
       operationId: getLearningPackageSummary
@@ -242,7 +298,7 @@ paths:
                   $ref: '#/components/schemas/LearningPackageSummary'
         '500':
           description: Internal Server Error
-  /api/package-search:
+  /api/package/search:
     get:
       summary: Get all learning packages by title, description or category
       operationId: getLearningPackageByTitleDescriptionOrCategory
@@ -276,6 +332,104 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/LearningPackage'
+        '404':
+          description: Not Found
+        '500':
+          description: Internal Server Error
+
+  /api/fact:
+    get:
+      summary: Get all learning facts
+      operationId: getLearningFact
+      tags:
+        - Learning Facts
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/LearningFact'
+        '500':
+          description: Internal Server Error
+  /api/fact/{id}:
+    get:
+      summary: Get a learning fact by id
+      operationId: getLearningFactById
+      tags:
+        - Learning Facts
+      parameters:
+        - name: id
+          in: path
+          description: The id of the learning fact
+          required: true
+          schema:
+            type: number
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/LearningFact'
+        '404':
+          description: Not Found
+        '500':
+          description: Internal Server Error
+    put:
+      summary: Update a learning fact by id
+      operationId: updateLearningFactById
+      tags:
+        - Learning Facts
+      parameters:
+        - name: id
+          in: path
+          description: The id of the learning fact
+          required: true
+          schema:
+            type: number
+      requestBody:
+        description: The learning fact to update
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/LearningFact'
+      responses:
+        '204':
+          description: Updated
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/LearningFact'
+        '400':
+          description: Bad Request
+        '404':
+          description: Not Found
+        '500':
+          description: Internal Server Error
+  /api/fact/{id}/deactivate:
+    put:
+      summary: Deactivate a learning fact by id
+      operationId: deactivateLearningFactById
+      tags:
+        - Learning Facts
+      parameters:
+        - name: id
+          in: path
+          description: The id of the learning fact
+          required: true
+          schema:
+            type: number
+      responses:
+        '204':
+          description: Updated
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/LearningFact'
         '404':
           description: Not Found
         '500':
@@ -382,3 +536,50 @@ components:
       required:
         - id
         - title
+    LearningFact:
+      type: object
+      properties:
+        factId:
+          type: number
+          description: The id of the learning fact
+          example: 1
+        front:
+          type: string
+          description: The front of the learning fact
+          example: What is TypeScript?
+        back:
+          type: string
+          description: The back of the learning fact
+          example: TypeScript is a statically typed superset of JavaScript.
+        source:
+          type: string
+          description: The source of the learning fact
+          example: https://www.google.com/
+        relatedImage:
+          type: string
+          description: The related image of the learning fact
+          example: https://www.google.com/
+        relatedLink:
+          type: string
+          description: The related link of the learning fact
+          example: https://www.google.com/
+        isActive:
+          type: boolean
+          description: The status of the learning fact
+          example: true
+        packageId:
+          type: number
+          description: The id of the learning package
+          example: 1
+        creatorId:
+          type: number
+          description: The id of the creator of the learning fact
+          example: 1
+      required:
+        - factId
+        - front
+        - back
+        - source
+        - isActive
+        - packageId
+        - creatorId
